--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -95,6 +95,10 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
             <version>2.7.18</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
